--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   padding: 0;
   text-align: center;
   font-family: 'Roboto', sans-serif;
+  font-weight:300;
   color: #222;
   background: #f7f5f0;
 }
@@ -15,10 +16,10 @@ body {
 
 a {
   text-decoration: none;
-  color: #999;
+  color: #FFF;
 }
 a:hover {
-  color: #6633ff;
+  color: #f1ae78;
 }
 
 /* Section Styles */
@@ -52,12 +53,12 @@ a:hover {
   transition: all .5s;
 }
 .nav a:hover {
-  color: white
+  color: #f1ae78;
 }
 
 header {
   text-align: center;
-  background: url('images/laptop_1-wallpaper-1440x900.jpg') no-repeat top center ;
+  background: url('images/background.png') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
@@ -74,20 +75,20 @@ header .profile-image {
   transition: all .5s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.15) rotate(5deg);
 }
 .tag {
-  background-color: #efefef;
+  background-color: #FFF;
   color: black;
-  padding: 10px;
-  border-radius: 5px;
+  padding: 7.5px 15px;
   display: table;
   margin: 10px auto;
 }
 .location {
-  /*background-color: #222;*/
-  color: #E74C3C;
+  background-color: #222;
+  color: #FFF;
 }
+
 .card {
   margin: 30px;
   padding: 20px 40px 40px;
@@ -95,29 +96,31 @@ header .profile-image:hover {
   text-align: left;
   background: #fff;
   border-bottom: 4px solid #ccc;
-  border-radius: 6px;
   transition: all .5s;
 }
 .card:hover {
-  border-color: #ff99ff;
+  border-color: #F6CAA6;
 }
 
 ul.skills {
   padding: 0;
-  text-align: center;
+  text-align: left;
 }
 
 .skills li {
-  border-radius: 6px;
   display: inline-block;
-  background: #ff9904;
-  color: white;
-  padding: 5px 10px;
+  background: #f8e4be;
+  color: black;
+  padding: 10px 15px;
   margin: 2px;
 }
 
 .skills li:nth-child(odd) {
-  background: #0399ff;
+  background: #F6CAA6;
+}
+
+span.quals {
+  font-weight: 500;
 }
 
 footer {
@@ -198,9 +201,23 @@ a.social:hover {
   }
 
   footer {
-    font-size: 1.3em;
+    font-size: 1.2em;
     max-width: 1200px;
     margin: 40px auto;
+  }
+
+  .fa-github {
+    color: #000;
+  }
+
+  .fa-linkedin-square {
+    color: #000;
+    padding-left: 10px;
+  }
+
+  .fa-envelope {
+    color: #000;
+    padding-left: 10px;
   }
 
 }
