--- a/styles.css
+++ b/styles.css
@@ -67,26 +67,27 @@ header {
   line-height: 1.5;
 }
 header .profile-image {
-  margin-top: 50px;
-  width: 150px;
-  height: 150px;
+  margin-top: 35px;
+  margin-bottom: 5px;
+  width: 175px;
+  height: 175px;
   border-radius: 50%;
-  /*border: 3px solid white;*/
   transition: all .5s;
 }
 header .profile-image:hover {
-  transform: scale(1.15) rotate(5deg);
+  transform: scale(1.075) rotate(-25deg);
 }
 .tag {
   background-color: #FFF;
   color: black;
-  padding: 7.5px 15px;
+  padding: 5px 15px;
   display: table;
   margin: 10px auto;
 }
 .location {
   background-color: #222;
   color: #FFF;
+  padding: 10px 15px;
 }
 
 .card {
@@ -100,6 +101,20 @@ header .profile-image:hover {
 }
 .card:hover {
   border-color: #F6CAA6;
+}
+
+.card:hover {
+  border-color: #F6CAA6;
+}
+
+.photosbox {
+  /*outline: 1px red solid;*/
+  margin: 30px;
+  max-width: 500px;
+  max-height: 500px;
+}
+figcaption {
+  font-size: 0.8em;
 }
 
 ul.skills {
@@ -170,6 +185,102 @@ a.social:hover {
   clear: both;
 }
 
+/*Photos*/
+
+.photos {
+  box-sizing: border-box;
+  max-width: 500px;
+}
+
+/*Contact form*/
+
+.container {
+	max-width:500px;
+	width:100%;
+	margin:0 auto;
+	position:relative;
+}
+
+#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] {
+  font: 400 16px/20px "Roboto";
+  font-weight:300;
+}
+
+#contact {
+	background:#FFF;
+	padding:25px;
+	margin:50px 0;
+}
+
+fieldset {
+	border: medium none !important;
+	margin: 0 0 10px;
+	min-width: 100%;
+	padding: 0;
+	width: 100%;
+}
+
+#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
+	width:100%;
+	border:1px solid #D3D3D3;
+	background:#FFF;
+	margin:0 0 5px;
+	padding:11px;
+}
+
+#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
+	-webkit-transition:border-color 0.3s ease-in-out;
+	-moz-transition:border-color 0.3s ease-in-out;
+	transition:border-color 0.3s ease-in-out;
+	border:1px solid #000;
+}
+
+#contact textarea {
+	height:125px;
+	max-width:100%;
+  resize:none;
+}
+
+#contact button[type="submit"] {
+	cursor:pointer;
+	width:100%;
+	border:none;
+	background:#F8E3BD;
+	color:#000;
+	margin:0 0 5px;
+	padding:19px;
+	font-size:16px;
+  border-radius: 0;
+}
+
+#contact button[type="submit"]:hover {
+	background:#f1ae78;
+	-webkit-transition:background 0.5s ease-in-out;
+	-moz-transition:background 0.5s ease-in-out;
+	transition:background-color 0.5s ease-in-out;
+}
+
+#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
+
+#contact input:focus, #contact textarea:focus {
+	outline:0;
+	border:1px solid #999;
+}
+
+::-webkit-input-placeholder {
+ color:#000;
+}
+:-moz-placeholder {
+ color:#000;
+}
+::-moz-placeholder {
+ color:#000;
+}
+:-ms-input-placeholder {
+ color:#000;
+}
+
+
 /* Styles for larger screens */
 @media screen and (min-width: 720px) {
 
@@ -190,7 +301,6 @@ a.social:hover {
     max-width: 1200px;
     padding: 0 30px;
   }
-
 
   main {
     padding-top: 20px;
